tests/NormalTests/paczka1/small_fuzzy/14066345.err
Error in line 2: zb4nTuWf S11 85,6
Error in line 4: 3S0qzyu25 S685 3,7
Error in line 7: S11 S685 15,0
Error in line 11: uFY0 A390 21,59
Error in line 12: uFY0 A390 71,8
